@@ -69,6 +69,9 @@ Many bug-fixes and a few new small features:
 - Changed the instance memory modifications to only check out-of-memory
   conditions on memory increases, and turned the secondary node warnings
   into errors (they can still be overridden via ``--force``)
+- Fixed the handling of a corner case when the Python installation gets
+  corrupted (e.g. a bad disk) while ganeti-noded is running and we try
+  to execute a command that doesn't exist
 
 And as usual, various improvements to the error messages, documentation
 and man pages.
